finally fix the layout issues of the video, sidebar and testimonials

--- a/css/style.css
+++ b/css/style.css
@@ -57,8 +57,8 @@ h3 {
   font-family: "Averia Gruesa Libre", cursive; }
 
 .landing-content__main {
-  margin: 4rem 0;
-  height: 75vh;
+  margin: 2rem 0;
+  height: 78vh;
   display: grid;
   grid-template-rows: repeat(4, 1fr);
   grid-template-columns: 1fr; }
@@ -67,7 +67,7 @@ h3 {
     grid-column: 1 / 2;
     position: relative; }
     .landing-content__main--video-content {
-      object-fit: fill;
+      object-fit: cover;
       height: 100%;
       position: absolute;
       top: 0;
@@ -79,20 +79,22 @@ h3 {
     font-size: 4.4rem;
     display: inline-block;
     opacity: 0.8;
-    padding: 5rem 1rem;
+    padding: 3.7rem 1rem;
     text-align: center;
     line-height: 1;
     background-image: linear-gradient(rgba(255, 255, 0, 0) 10%, black 90%);
     grid-row: 4 / 5;
     grid-column: 1 / 2;
     z-index: 99; }
-    .landing-content__main--title a:link,
-    .landing-content__main--title a:visited {
-      color: #fff;
-      text-shadow: 2px 2px 2px #130f13; }
-    .landing-content__main--title a:hover,
-    .landing-content__main--title a:active {
-      text-decoration: underline; }
+    .landing-content__main--title h1 {
+      transition: all 1s ease-in-out; }
+      .landing-content__main--title h1 a:link,
+      .landing-content__main--title h1 a:visited {
+        color: #b92d2d;
+        text-shadow: 2px 2px 2px #fff; }
+      .landing-content__main--title h1 a:hover,
+      .landing-content__main--title h1 a:active {
+        text-decoration: underline; }
 
 .trip-avatar-img {
   width: 100%;
@@ -101,12 +103,25 @@ h3 {
 .svg-icon {
   fill: #d24747; }
 
-.testimonials__heading {
-  font-size: 3.3rem;
-  color: #d24747; }
+.testimonials {
+  display: grid;
+  grid-template-columns: repeat(6, 1fr);
+  grid-template-rows: repeat(3, 1fr); }
+  .testimonials__heading {
+    font-size: 3.3rem;
+    color: #d24747;
+    grid-column: 1 / 7;
+    grid-row: 1 / 2; }
+  .testimonials__block--text {
+    font-size: 1.6rem; }
 
-.testimonials__block--text {
-  font-size: 1.6rem; }
+.block-1 {
+  grid-column: 1 / 7;
+  grid-row: 2 / 3; }
+
+.block-2 {
+  grid-column: 1 / 7;
+  grid-row: 3 / 4; }
 
 .header {
   margin: 0;
@@ -269,26 +284,34 @@ h3 {
   animation: zoomInLeft 0.4s cubic-bezier(0, -1, 0.88, 0.16); }
 
 .landing-content {
-  margin: 2rem auto;
+  margin: 3rem auto;
   width: 85%;
   display: grid;
   grid-template-columns: repeat(12, 1fr);
-  grid-template-rows: repeat(6, 1fr);
+  grid-template-rows: repeat(3, 30rem);
   grid-gap: 0.5rem;
-  justify-content: space-around; }
+  justify-content: space-between;
+  align-content: start; }
   .landing-content__main {
     grid-column: 2 / 9;
-    grid-row: 1 / 6; }
+    grid-row: 1 / 3; }
   .landing-content__sidebar {
-    margin: 4rem 0;
+    height: 78vh;
+    margin: 2rem 0;
     grid-column: 9 / 12;
-    grid-row: 1 / 6;
+    grid-row: 1 / 3;
+    display: flex;
+    flex-direction: column;
+    align-content: space-between;
     font-size: 1.6rem;
-    padding-left: 1rem; }
+    padding-left: 0.8rem; }
+    .landing-content__sidebar--heading {
+      display: inline-block;
+      padding-left: 0.3rem; }
     .landing-content__sidebar--trip:not(:last-child) {
       border-bottom: 1px solid rgba(136, 136, 136, 0.5); }
     .landing-content__sidebar--trip {
-      margin: 0.5rem;
+      margin: 0.3rem;
       padding: 2px;
       height: 16vh;
       display: grid;
@@ -302,6 +325,7 @@ h3 {
         justify-self: center;
         align-self: center; }
       .landing-content__sidebar--trip-img {
+        grid-column: 2 / 3;
         grid-row: 1 / 2;
         justify-self: start;
         align-self: center; }
@@ -309,13 +333,19 @@ h3 {
         line-height: 0.8;
         grid-column: 1 / 3;
         grid-row: 2 / 3;
-        padding-right: 2rem; }
+        margin-right: 1.3rem;
+        width: 91%; }
       .landing-content__sidebar--trip-click {
         cursor: pointer;
         grid-column: 2 / 3;
         grid-row: 2 / 3;
         justify-self: end;
-        align-self: end; }
+        align-self: end;
+        display: inline-block;
+        padding-top: 1.2rem; }
+  .landing-content__testimonials {
+    grid-column: 4 / 10;
+    grid-row: 3 / 4; }
 
 .zoomInDown {
   -webkit-animation-name: zoomInDown;
