--- a/sass/03components/_bg-video.scss
+++ b/sass/03components/_bg-video.scss
@@ -1,6 +1,6 @@
 .landing-content__main {
-  margin: 4rem 0;
-  height: 75vh;
+  margin: 2rem 0;
+  height: 78vh;
   display: grid;
   grid-template-rows: repeat(4, 1fr);
   grid-template-columns: 1fr;
@@ -11,7 +11,7 @@
     position: relative;
 
     &-content {
-      object-fit: fill;
+      object-fit: cover;
       height: 100%;
       position: absolute;
       top: 0;
@@ -26,7 +26,7 @@
     font-size: $font-size-xl;
     display: inline-block;
     opacity: 0.8;
-    padding: 5rem 1rem;
+    padding: 3.7rem 1rem;
     text-align: center;
     line-height: 1;
     background-image: linear-gradient(
@@ -36,26 +36,20 @@
     grid-row: 4 / 5;
     grid-column: 1 / 2;
     z-index: 99;
+    h1 {
+      transition: all 1s ease-in-out;
+      & a:link,
+      & a:visited {
+        color: darken($default-color-heading, 10%);
+        text-shadow: 2px 2px 2px $color-white;
+      }
 
-    // h1 {
-    //   transition: all 1s ease-in-out;
-    //   -webkit-transition: all 1s ease-in-out;
-    //   -moz-transition: all 1s ease-in-out;
-    //   -ms-transition: all 1s ease-in-out;
-    //   -o-transition: all 1s ease-in-out;
-    // }
-
-    & a:link,
-    & a:visited {
-      color: $color-white;
-      text-shadow: 2px 2px 2px darken($color-dark, 20%);
-    }
-
-    & a:hover,
-    & a:active {
-      text-decoration: underline;
-      // animation: bounceInDown;
-      // -webkit-animation: bounceInDown;
+      & a:hover,
+      & a:active {
+        text-decoration: underline;
+        // animation: bounceInDown;
+        // -webkit-animation: bounceInDown;
+      }
     }
   }
 }
