--- a/sass/03components/_testimonials.scss
+++ b/sass/03components/_testimonials.scss
@@ -1,8 +1,14 @@
 .testimonials {
   //margin: 3rem auto;
+  display: grid;
+  grid-template-columns: repeat(6, 1fr);
+  grid-template-rows: repeat(3, 1fr);
+
   &__heading {
     font-size: $font-size-big;
     color: $default-color-heading;
+    grid-column: 1 / 7;
+    grid-row: 1 / 2;
   }
   &__block {
     &--person {
@@ -17,8 +23,13 @@
     }
   }
 }
-// &__testimonials {
-//   border: 2px solid olivedrab;
-//   grid-column: 3 / 11;
-//   grid-row: 6 / 7;
-// }
+
+.block-1 {
+  grid-column: 1 / 7;
+  grid-row: 2 / 3;
+}
+
+.block-2 {
+  grid-column: 1 / 7;
+  grid-row: 3 / 4;
+}
